@@ -1,3 +1,7 @@
+2011-05-29  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* gcc.target/mips/reg-var-1.c: New test.
+
 2011-05-29  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/49217
